made some minor edits

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,3 @@
-{{!-- App Container --}}
-{{!-- background-image: url('https://images.assetsdelivery.com/compings_v2/lilu330/lilu3301511/lilu330151100006.jpg'); --}}
-
 
 {{!-- Home START  --}}
 <div id="home">
@@ -13,7 +10,7 @@
                 <h5 class="header col s12 light white-text">A robotic approach to a motivational problem.</h5>
             </div>
             <div class="row center">
-                <a id="getStartedBtn" href="#" id="download-button" class="btn-large waves-effect waves-light amber darken-2">Get Started</a>
+                <a id="getStartedBtn" href="/goalbot/" id="download-button" class="btn-large waves-effect waves-light amber darken-2">Get Started</a>
             </div>
             <br>
             <br>
@@ -85,10 +82,9 @@
             <br>
             <h1 class="header center white-text">Reviews</h1>
             <div class="row center">
-                <h5 class="header col s12 light white-text">"We would give GoalBot an A+"
+                <h5 class="header col s12 light white-text">"My kids really enjoy completing tasks now that they have to level up Goalbot!"
                     <br>
-                    -Chris Stead, Kevin Lee, &
-                    Kevin Castro.</h5>
+                    -Antonio Sevilla</h5>
             </div>
             <br>
             <br>
@@ -127,388 +123,10 @@
 
 {{!-- Sign up END --}}
 
-{{!-- Entire App Container Start --}}
-<div id="appContainer" class="container hide">
-    <!--  Avatar & Stats -->
-    <div id="avatarAndStats" class="row">
-        {{!-- Avatar --}}
-        <div id="avatarContainer" class="col s4 m3">
-            <img id="avatar" src="" alt="robot avatar right-align">
-        </div>
-        {{!-- Avatar END --}}
-
-        {{!-- Stats --}}
-        <div id="statsContainer" class="col s7 m8 l6 play-font container">
-            <div class="letter-spacing">
-                NAME: <span id="name">CHRIS STEAD</span>
-            </div>
-            <div class="">
-                LEVEL: <span id="level">14</span>
-            </div>
-            HP:
-            <div id="hp" class="progress">
-                <div class="determinate" style="width: 100%"></div>
-            </div>
-            Experience:
-            <div id="experience" class="progress">
-                <div id="experiencePoints" class="determinate" style="width: 0%"></div>
-            </div>
-        </div>
-        {{!-- Stats END --}}
-    </div>
-    <!-- Avatar & Stats END -->
 
 
 
-    <!-- Menu Buttons & App -->
-    <div id="menuButtons" class="row">
-        <nav class="nav-extended blue-grey darken-2">
-            <div class="nav-content">
-                <ul class="tabs tabs-transparent">
-                    <li class="tab"><a class="active " href="#goalListContainer">Goals</a></li>
-                    <li class="tab"><a href="#upgradeContainer">Upgrade</a></li>
-                    <li class="tab"><a href="#test3">Motivation</a></li>
-                    {{!-- <li class="tab"><a href="#test4">Motivation</a></li> --}}
-                </ul>
-            </div>
-        </nav>
 
-        <!-- Goal List Screen -->
-        <div id="goalListContainer" class="col s12">
-            {{!-- <ul id="goal-list" class="collection with-header to-do-list"> --}}
-            <ul id="goal-list" class="collapsible to-do-list">
-                {{#each goals}}
-                {{!-- <li data-id="{{this.id}}" class="collection-item"> --}}
-                <li data-id="{{this.id}}">
-                    <div class="collapsible-header">{{{this.goal}}}</div>
-                    <div id="collapsibleBody" class="collapsible-body">
-                        {{!-- Form to Complete Milestones START--}}
-                        <form id="milestone form" action="#">
-                            <p>
-                                <label>
-                                    <input class="checkbox" type="checkbox">
-                                    <span class="black-text letter-spacing">SUBGOAL 1: {{ms1}}</span>
-                                </label>
-                            </p>
-                            <p>
-                                <label>
-                                    <input class="checkbox" type="checkbox">
-                                    <span class="black-text letter-spacing">SUBGOAL 2: {{ms2}}</span>
-                                </label>
-                            </p>
-                            <p>
-                                <label>
-                                    <input class="checkbox" type="checkbox">
-                                    <span class="black-text letter-spacing">SUBGOAL 3: {{ms3}}</span>
-                                </label>
-                            </p>
-                            <p>
-                                <label>
-                                    <input class="checkbox" type="checkbox">
-                                    <span class="black-text letter-spacing">SUBGOAL 4: {{ms4}}</span>
-                                </label>
-                            </p>
-                            <p>
-                                <label>
-                                    <input class="checkbox" type="checkbox">
-                                    <span class="black-text letter-spacing">SUBGOAL 5: {{ms5}}</span>
-                                </label>
-                            </p>
-
-                        </form>
-                        <strong>complete by</strong>: {{completetionDate}}</p>
-                        <button class="btn btn-danger float-right delete">ｘ</button>
-                        {{!-- Form to Complete Milestones END--}}
-                    </div>
-
-
-                    {{!-- <div>
-                        <a href="goal/{{this.id}}">{{this.goal}}</a>
-                    </div> --}}
-                </li>
-                {{/each}}
-            </ul>
-        </div>
-        <!-- Goal List Screen END -->
-
-        {{!--====================--}}
-        {{!-- Upgrades Tab START --}}
-        {{!--====================--}}
-        <div id="upgradeContainer" class="col s12 container">
-            <div class="row">
-                <div class="col s6 offset-s3">
-                    <div class="card">
-                        <div class="card-image">
-                            <img id="upgradeBot1" class="responsive-img" src="images/robotmedium.png">
-                            <a id="upgradeModalTrigger" class="btn-floating halfway-fab waves-effect waves-light amber darken-2 tooltipped" data-position="top" data-tooltip="Only $14.99"><i class="material-icons">build</i></a>
-                        </div>
-                        <div class="card-content blue-grey darken-2">
-                            <h2 class="letter-spacing white-text ">R3D3</h2>
-                            <p class="letter-spacing white-text text-darken-2">Level 15</p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-        </div>
-        {{!--====================--}}
-        {{!-- Upgrades Tab END   --}}
-        {{!--====================--}}
-
-
-        {{!--==========================--}}
-        {{!-- Motivational Quotes START--}}
-        {{!--==========================--}}
-        <div id="test3" class="col s12 container">
-            <h4 class="center-align">Quote of the Day</h4>
-            <div class="quoteOuterContainer row">
-                <div class="col s6 offset-s3">
-                    <div class="quoteInnerContainer">
-                        <p class="quote">"It does not matter how slowly you go as long as you do not stop."</p>
-                        <p class="grey-text lighten-1">June 18, 2019</p>
-                    </div>
-                    <hr>
-                    <div class="quoteInnerContainer">
-                        <p class="quote">"Life is 10% what happens to you and 90% how you react to it."</p>
-                        <p class="grey-text lighten-1">June 17, 2019</p>
-                    </div>
-                    <hr>
-                    <div class="quoteInnerContainer">
-                        <p class="quote">"You can do it!" -Mohini</p>
-                        <p class="grey-text lighten-1">June 16, 2019</p>
-                    </div>
-                    <hr>
-                    <div class="quoteInnerContainer">
-                        <p class="quote">"Just try it!" -Jessica</p>
-                        <p class="grey-text lighten-1">June 15, 2019</p>
-                    </div>
-                    <hr>
-                    <div class="quoteInnerContainer">
-                        <p class="quote">"The class is pass no pass, guys, don't worry!!!" -Izzy</p>
-                        <p class="grey-text lighten-1">June 14, 2019</p>
-                    </div>
-                    <a href="#" class="waves-effect waves-light btn amber darken-2">See More Quotes...</a>
-                </div>
-            </div>
-
-        </div>
-        {{!--==========================--}}
-        {{!-- Motivational Quotes START--}}
-        {{!--==========================--}}
-
-        {{!-- <div id="test4" class="col s12"></div> --}}
-    </div>
-    <!-- Menu Buttons and App END -->
-
-</div>
-<!-- Entire App Container END -->
-
-
-
-<!-- Floating Action Button -->
-<div id="floatingActionButton" class="fixed-action-btn hide">
-    <a id="#new-to-do" class="btn-floating btn-large amber darken-2 tooltipped modal-trigger"
-        href="#goalCreationModal" data-position="left" data-tooltip="New Goal">
-        <i class="large material-icons">mode_edit</i>
-    </a>
-</div>
-<!-- END: Floating Action Button -->
-
-<!-- New Goal Modal -->
-<div id="goalCreationModal" class="modal">
-    <!-- modal-content -->
-    <div class="modal-content container">
-        <!-- Create To Do Modal Content -->
-        <form class="clearfix mb-4" action="POST">
-            <h4 class="letter-spacing center">CREATE GOAL</h4>
-
-            {{!-- Main Goal --}}
-            <div class="row">
-                <div class="form-group input-field">
-                    <label for="goal">Goal</label>
-                    <input type="text" id="goal" class="form-control" aria-describedby="goal"
-                        placeholder="e.g. Run a Marathon">
-                </div>
-            </div>
-            {{!-- Main Goal END --}}
-
-            <!--Subtasks row -->
-            <div class="row">
-                <div id="subtaskContainer" class="col s12">
-                    <ul id="subtasks" class="collection with-header">
-                        <li class="collection-header">
-                            <p>Setting a goal can be hard. Lets break down your goal into 5 manageable
-                                tasks!</p>
-                        </li>
-                        <div id="new-subtasks"></div>
-                        <li id="subtask-input-container" class="collection-item">
-
-                            <div class="form-group input-field col s12">
-                                <label for="ms1">Milestone 1</label>
-                                <textarea class="form-control materialize-textarea" id="ms1" aria-describedby="ms1"
-                                    placeholder=""></textarea>
-                            </div>
-                            <div class="form-group input-field col s12">
-                                <label for="ms2">Milestone 2</label>
-                                <textarea class="form-control materialize-textarea" id="ms2" aria-describedby="ms2"
-                                    placeholder=""></textarea>
-                            </div>
-                            <div class="form-group input-field col s12">
-                                <label for="ms3">Milestone 3</label>
-                                <textarea class="form-control materialize-textarea" id="ms3" aria-describedby="ms3"
-                                    placeholder=""></textarea>
-                            </div>
-                            <div class="form-group input-field col s12">
-                                <label for="ms4">Milestone 4</label>
-                                <textarea class="form-control materialize-textarea" id="ms4" aria-describedby="ms4"
-                                    placeholder=""></textarea>
-                            </div>
-
-                            <div class="form-group input-field col s12">
-                                <label for="ms5">Milestone 5</label>
-                                <textarea class="form-control materialize-textarea" id="ms5" aria-describedby="ms5"
-                                    placeholder=""></textarea>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <!-- Subtasks Row END -->
-
-
-            <!-- Date Picker -->
-            <div class="form-group input-field col s6 ">
-                <label for="end-date"></label>
-                <input class="form-control datepicker" id="end-date" aria-describedby="end-date"
-                    placeholder="When would you like to reach this goal?"></input type="date">
-            </div>
-            <!-- Date Picker END -->
-
-
-    </div>
-    {{!-- Modal Footer --}}
-    <div class="modal-footer">
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
-        <a id="submit" href="#!" class="modal-close waves-effect waves-green btn-flat">Create</a>
-    </div>
-    </form>
-    {{!-- Modal Footer END --}}
-</div>
-<!-- New Goal Modal END -->
-
-
-{{!-- Level Up Modal START --}}
-<div id="levelUpModal" class="modal blue-grey">
-    <div id="levelUpModalContentContainer" class="modal-content">
-        <h4 class="center letter-spacing white-text">LEVEL UP!</h4>
-        <br>
-        <div id="levelUpImageContainer" class="z-depth-2">
-            <img id="levelUpImage" class="responsive-img" src="/images/robotsmall.png" alt="">
-        </div>
-        <br>
-        <br>
-
-        <table id="levelUpStatsTable" class=" center white z-depth-2">
-            <thead>
-                <tr class="amber darken-2 ">
-                    <th class="center white-text">New Stats</th>
-                    <th></th>
-                </tr>
-            </thead>
-
-            <tbody>
-                <tr>
-                    <td class="center">HP</td>
-                    <td class="">234
-                        <span class="green-text">+60</span>
-
-                    </td>
-                </tr>
-                <tr>
-                    <td class="center">Intelligence</td>
-                    <td>184
-                        <span class="green-text">+25</span>
-
-                    </td>
-                </tr>
-                <tr>
-                    <td class="center">Strength</td>
-                    <td>116
-                        <span class="green-text">+15</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="center">Speed</td>
-                    <td>115
-                        <span class="green-text">+34</span>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-
-    </div>
-    <div class="modal-footer blue-grey">
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat white-text">Continue</a>
-    </div>
-</div>
-{{!-- Level Up Modal END --}}
-
-{{!-- Upgrade Modal START --}}
-<div id="upgradeModal" class="modal blue-grey">
-    <div id="upgradeModalContentContainer" class="modal-content">
-        <h4 class="center letter-spacing white-text">UPGRADED!</h4>
-        <br>
-        <div id="upgradeImageContainer" class="z-depth-2">
-            <img id="upgradeImage" class="responsive-img" src="/images/robotmedium.png" alt="">
-        </div>
-        <br>
-        <br>
-
-        <table id="upgradeStatsTable" class=" center white z-depth-2">
-            <thead>
-                <tr class="amber darken-2 ">
-                    <th class="center white-text">New Stats</th>
-                    <th></th>
-                </tr>
-            </thead>
-
-            <tbody>
-                <tr>
-                    <td class="center">HP</td>
-                    <td class="">1294
-                        <span class="green-text">+948</span>
-
-                    </td>
-                </tr>
-                <tr>
-                    <td class="center">Intelligence</td>
-                    <td>1209
-                        <span class="green-text">+847</span>
-
-                    </td>
-                </tr>
-                <tr>
-                    <td class="center">Strength</td>
-                    <td>1131
-                        <span class="green-text">+834</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="center">Speed</td>
-                    <td>1149
-                        <span class="green-text">+948</span>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-
-    </div>
-    <div class="modal-footer blue-grey">
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat white-text">Continue</a>
-    </div>
-</div>
-{{!-- Upgrade Modal END --}}
 
 
 
@@ -564,5 +182,3 @@
 </div> --}}
 
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
