--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="/styles/styles.css">
   
 
   {{!------------------------------ MATERIALIZE CSS CDN----------------------- --}}
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css?family=Play:400,700&display=swap" rel="stylesheet">
  
   {{!------------------------------ ANIMATIONS ----------------------------}}
-  <link rel="stylesheet" href="styles/animate.css">
+  <link rel="stylesheet" href="/styles/animate.css">
 
 
   <title>GoalBot</title>
@@ -23,9 +23,9 @@
 <body>
   <nav>
     <div class="nav-wrapper white">
-      <a id="brand-logo" href="#!" class="brand-logo black-text play-font">
+      <a id="brand-logo" href="/" class="brand-logo black-text play-font">
         <i id="logo-icon" class="material-icons amber-text text-darken-2">check_circle</i><span id="navbarTitle" class="letter-spacing">GOALBOT</span> </a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger black-text">
+      {{!-- <a href="#" data-target="mobile-demo" class="sidenav-trigger black-text">
         <i class="material-icons">menu</i>
       </a>
       <ul class="right hide-on-med-and-down">
@@ -33,7 +33,7 @@
         <li><a href="#modal" class="black-text modal-trigger" data-target="modalLogin">Login</a></li>
         <li><a href="/logout" class="black-text">Log Out</a></li>
         <li><a href="/" class="black-text">Play</a></li>
-      </ul>
+      </ul> --}}
     </div>
   </nav>
   <ul class="sidenav" id="mobile-demo">
@@ -59,10 +59,9 @@
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="../../public/js/index.js"></script>
-  <script src="../../public/js/isAuthenticated.js"></script>
-  {{!-- <script src="../../public/js/login.js"></script> --}}
-  {{!-- <script src="../../public/js/signup.js"></script> --}}
+
+  <script src="/js/goalbot.js"></script>
+  <script src="/js/isAuthenticated.js"></script>
 </body>
 
 </html>
